syntax = "proto3";
import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "People.Grpc.Gateway";

service Gateway {
  rpc GetProfile (people.AccountId) returns (ProfileReply);
  rpc GetPrimaryEmail(people.AccountId) returns (Connection);
  
  rpc UpdateProfile(UpdateProfileRequest) returns (ProfileReply);
  rpc ConfirmingConnection(ConfirmingRequest) returns (people.Confirming);
  rpc ConfirmConnection(ConfirmRequest) returns (ProfileReply);
  rpc SetEmailAsPrimary(SetEmailAsPrimaryRequest) returns (ProfileReply);
  rpc DeleteConnection(DeleteConnectionRequest) returns (ProfileReply);

  rpc CreatingPassword(CreatingPasswordRequest) returns(people.Confirming);
  rpc CreatePassword(CreatePasswordRequest) returns (ProfileReply);
  rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty);

  rpc GetCountries(CountriesRequest) returns(CountriesReply);
}

message ProfileReply {
  people.AccountId id = 1;
  people.Name name = 2;
  people.Address address = 3;
  string time_zone = 4;
  people.DayOfWeek first_day_of_week = 5;
  string language = 6;
  people.Gender gender = 7;
  google.protobuf.Timestamp date_of_birth = 8;
  google.protobuf.StringValue bio = 9;
  string picture = 10;
  people.Ban ban = 11;
  bool is_password_available = 12;
  google.protobuf.Timestamp created_at = 13;
  repeated Connection connections = 14;
}

message Connection {
  people.IdentityType type = 1;
  string value = 2;
  bool is_confirmed = 3;

  oneof ConnectionType {
    EmailConnection email = 4;
    SocialConnection social = 5;
  }
}

message EmailConnection {
  bool is_primary = 1;
}

message SocialConnection {
  google.protobuf.StringValue first_name = 1;
  google.protobuf.StringValue last_name = 2;
}

message CountriesRequest {
  string language = 1;
}

message CountriesReply {
  repeated Country countries = 1;
}

message Country {
  string code = 1;
  string name = 2;
}

message UpdateProfileRequest {
  people.AccountId id = 1;
  google.protobuf.StringValue first_name = 2;
  google.protobuf.StringValue last_name = 3;
  string nickname = 4;
  bool prefer_nickname = 5;
  string language = 6;
  people.Gender gender = 7;
  google.protobuf.Timestamp date_of_birth = 8;
  google.protobuf.StringValue bio = 9;
  string country_code = 10;
  google.protobuf.StringValue city_name = 11;
  string time_zone = 12;
  people.DayOfWeek first_day_of_week = 13;
}

message ConfirmingRequest {
  people.AccountId id = 1;
  people.Identity identity = 2;
  string language = 3;
}

message ConfirmRequest {
  people.AccountId id = 1;
  people.Identity identity = 2;
  people.Confirm confirm = 3;
}

message SetEmailAsPrimaryRequest {
  people.AccountId id = 1;
  string email = 2;
}

message DeleteConnectionRequest{
  people.AccountId id = 1;
  people.Identity identity = 2;
}

message CreatingPasswordRequest {
  people.AccountId id = 1;
  string language = 2;
}
message CreatePasswordRequest{
  people.AccountId id = 1;
  people.Confirm confirm = 2;
  string password = 3;
}

message UpdatePasswordRequest{
  people.AccountId id = 1;
  string old_password = 2;
  string new_password = 3;
}

